# pb-buddy

./: .funcignore  .gitignore  Makefile  README.md  bike_eda.py  category_dict.json  data_load.py  eda.py  email_alerts.py  environment.yaml  parquet_data_load.py  pyproject.toml  railway.toml  requirements.txt  scrape_base.py  scratch.py
.devcontainer/: Dockerfile  Dockerfile.old  devcontainer.json
.github/workflows/: complete_scrape.yml  deploy-bike-buddy-app.yml  email_template.yaml  email_template.yml  master_bike-buddy-app.yml  report.yml  scrape.yml  scrape_europe.yml  scrape_north_america.yml  scrape_template.yaml  scrape_template.yml
alerts/: alerts.json  updated_alerts.json
api/: .env  Dockerfile  README.md  main.py  model.py  predictor.py  requirements.txt  test.json
api/browser_service_api/: browser_service.py
api/pricing_api/: README.md  main.py  small_test.json  test.json
app/: README.md  __init__.py  app.py  browser_service.py  common.py  main.py  parser.py  requirements.txt  serve_app.py  ui.py
apps/chat_app/: app.py  gunicorn_config.py  nixpacks.toml  prompts.py  requirements.txt
apps/pricing_app/: README.md  main.py  ui.py
browser_service/: browser_service.py
chat_app/: app.py  prompts.py  requirements.txt
chat_app/app/: app.py  prompts.py
chat_app/templates/: index.html
data/base_data/: category_100_ad_data.parquet.gzip  category_101_ad_data.parquet.gzip  category_11_ad_data.parquet.gzip  category_12_ad_data.parquet.gzip  category_13_ad_data.parquet.gzip  category_14_ad_data.parquet.gzip  category_15_ad_data.parquet.gzip  category_16_ad_data.parquet.gzip  category_17_ad_data.parquet.gzip  category_18_ad_data.parquet.gzip  category_19_ad_data.parquet.gzip  category_1_ad_data.parquet.gzip  category_20_ad_data.parquet.gzip  category_21_ad_data.parquet.gzip  category_22_ad_data.parquet.gzip  category_23_ad_data.parquet.gzip  category_24_ad_data.parquet.gzip  category_25_ad_data.parquet.gzip  category_26_ad_data.parquet.gzip  category_27_ad_data.parquet.gzip  category_28_ad_data.parquet.gzip  category_29_ad_data.parquet.gzip  category_2_ad_data.parquet.gzip  category_30_ad_data.parquet.gzip  category_31_ad_data.parquet.gzip  category_32_ad_data.parquet.gzip  category_33_ad_data.parquet.gzip  category_34_ad_data.parquet.gzip  category_35_ad_data.parquet.gzip  category_37_ad_data.parquet.gzip  category_38_ad_data.parquet.gzip  category_39_ad_data.parquet.gzip  category_3_ad_data.parquet.gzip  category_40_ad_data.parquet.gzip  category_41_ad_data.parquet.gzip  category_42_ad_data.parquet.gzip  category_43_ad_data.parquet.gzip  category_44_ad_data.parquet.gzip  category_45_ad_data.parquet.gzip  category_46_ad_data.parquet.gzip  (+58 more)
data/base_data_parquet/: category_100_ad_data.parquet.gzip  category_101_ad_data.parquet.gzip  category_13_ad_data.parquet.gzip  category_14_ad_data.parquet.gzip  category_23_ad_data.parquet.gzip  category_24_ad_data.parquet.gzip  (+39 more)
pb_buddy/: alerts.py  constants.py  data_processors.py  database.py  emailer.py  resources.py  scraper.py  specs.py  utils.py
reports/: historical_eda.md  scrape_report.ipynb  scrape_report.md
resources/: manufacturers.txt  region_map.json
scrapeTimer/: __init__.py  alerts.json  function.json
scripts/: build_chat_dataset.py  build_dataset.py  build_historical_dataset.py  email_alerts.py  email_scrape_report.py  email_status_report.py  scrape_backfill.py  scrape_base.py  scrape_bike_links.py  scrape_bike_specs.py  scrape_images.py  scratch.py  specs_example.py
(+107 files in other folders)
