[tool.poetry]
name = "pb-buddy"
version = "0.1.0"
description = "A package to help you ride better."
authors = ["Dustin Andrews"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.21.2"
pandas = "^1.3.3"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
tqdm = "^4.62.3"
joblib = "^1.0.1"
python-dotenv = "^0.19.0"
certifi = "^2021.5.30"
pymongo = {extras = ["srv"], version = "^3.12.0"}
matplotlib = "^3.4.3"
Jinja2 = "^3.0.2"
jupytext = "^1.13.8"
nbconvert = "^6.4.5"
azure-storage-blob = "^12.11.0"
pyarrow = "^7.0.0"
seaborn = "^0.11.2"
forex-python = "^1.8"
lxml = "^4.8.0"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
