[tool.poetry]
name = "pb-buddy"
version = "0.1.0"
description = "A package to help you ride better."
authors = ["Dustin Andrews"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21.2"
pandas = "^1.3.3"
beautifulsoup4 = "^4.10.0"
requests = {extras = ["socks"], version = "^2.31.0"}
tqdm = "^4.62.3"
joblib = "^1.0.1"
python-dotenv = "^0.19.0"
certifi = "^2022.12.7"
pymongo = {extras = ["srv"], version = "^3.12.0"}
matplotlib = "^3.4.3"
Jinja2 = "^3.0.2"
jupytext = "^1.13.8"
nbconvert = "^6.4.5"
azure-storage-blob = "^12.11.0"
seaborn = "^0.11.2"
lxml = "^4.9.1"
html5lib = "^1.1"
pandas-datareader = "^0.10.0"
black = "^23.1.0"
fire = "^0.5.0"
playwright = "^1.37.0"
rapidfuzz = "^3.2.0"
scikit-learn = "1.2.2"
tenacity = "^9.0.0"
openai = "^1.42.0"
duckdb = "^1.0.0"


[tool.poetry.dev-dependencies]
ipykernel = "^6.4.1"

[tool.poetry.group.modelling]
optional = true

[tool.poetry.group.modelling.dependencies]
catboost = "^1"
transformers = "^4"
datasets = "^2"
mlflow = "^2"
umap-learn = "^0"
plotly = "^5.12.0"
dash = "^2.7.1"
dash-bootstrap-components = "^1.3.0"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
